@@ -1,5 +1,6 @@
 (Claudia Juergen)
-- SF Patch 1450491 i18n configurable multilingualism support
+- SF Patch #1722557 for SF Bug #1549290 Suggest Features uses hard coded strings
+- SF Patch #1450491 i18n configurable multilingualism support
 1.4.2 beta
 ===========
 
